[project]
name = "llmsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate = 1.6.0",
    "annotated-types = 0.7.0",
    "certifi = 2025.1.31",
    "charset-normalizer = 3.4.1",
    "contourpy = 1.3.1",
    "cycler = 0.12.1",
    "filelock = 3.18.0",
    "fonttools = 4.57.0",
    "fsspec = 2025.3.2",
    "huggingface-hub = 0.30.2",
    "idna = 3.10",
    "jinja2 = 3.1.6",
    "kiwisolver = 1.4.8",
    "markupsafe = 3.0.2",
    "matplotlib = 3.10.1",
    "mpmath = 1.3.0",
    "networkx = 3.4.2",
    "numpy = 2.2.4",
    "nvidia-cublas-cu12 = 12.4.5.8",
    "nvidia-cuda-cupti-cu12 = 12.4.127",
    "nvidia-cuda-nvrtc-cu12 = 12.4.127",
    "nvidia-cuda-runtime-cu12 = 12.4.127",
    "nvidia-cudnn-cu12 = 9.1.0.70",
    "nvidia-cufft-cu12 = 11.2.1.3",
    "nvidia-curand-cu12 = 10.3.5.147",
    "nvidia-cusolver-cu12 = 11.6.1.9",
    "nvidia-cusparse-cu12 = 12.3.1.170",
    "nvidia-cusparselt-cu12 = 0.6.2",
    "nvidia-nccl-cu12 = 2.21.5",
    "nvidia-nvjitlink-cu12 = 12.4.127",
    "nvidia-nvtx-cu12 = 12.4.127",
    "packaging = 24.2",
    "pandas = 2.2.3",
    "pillow = 11.1.0",
    "psutil = 7.0.0",
    "pydantic = 2.11.3",
    "pydantic-core = 2.33.1",
    "pyparsing = 3.2.3",
    "pyqt5 = 5.15.11",
    "pyqt5-qt5 = 5.15.16",
    "pyqt5-sip = 12.17.0",
    "python-dateutil = 2.9.0.post0",
    "pytz = 2025.2",
    "pyyaml = 6.0.2",
    "regex = 2024.11.6",
    "requests = 2.32.3",
    "safetensors = 0.5.3",
    "seaborn = 0.13.2",
    "setuptools = 78.1.0",
    "six = 1.17.0",
    "sympy = 1.13.1",
    "tokenizers = 0.21.1",
    "torch = 2.6.0",
    "tqdm = 4.67.1",
    "transformers = 4.51.1",
    "triton = 3.2.0",
    "typing-extensions = 4.13.1",
    "typing-inspection = 0.4.0",
    "tzdata = 2025.2",
    "urllib3 = 2.3.0"
]
